# evidence-loop-vercel-web-analytics-connector

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  connector-contract.md  releasing.md
examples/: envelope.json
scripts/: artifact_smoke.py  release_scan.py  security_scan.py
src/evidence_loop_vercel_web_analytics/: __init__.py  __main__.py  cli.py  connector.py  errors.py  http.py  safety.py
tests/: test_cli.py  test_connector.py  test_http.py  test_safety.py
tests/fixtures/: visits-count.json
